@@ -2,6 +2,10 @@
 
    points: 0 left.
 
+   o rotate/translate toolbar option menu needs a tooltip ::: 0.5
+
+   o try to fix JED download problem. ::: 0.5
+
 
 ------
 
